<resources>
    <string name="app_name">SIPELITA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="perda">(Berdasarkan PERDA Prov. Kal-Sel No. 4 Tahun 2018 Tentang \nRetribusi Pemakaian Kekayaan Daerah)</string>
    <string name="title_activity_e_card">ECardActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="evaluasi">Evaluasi :</string>
    <string name="tanggal_mulai">Tanggal Mulai</string>
    <string name="pretest">Pretest</string>
    <string name="post_test">Post Test</string>
    <string name="mauskan_jawaban_anda">Mauskan Jawaban Anda</string>
    <string name="level_1">1</string>
    <string name="level_2">2</string>
    <string name="level_3">3</string>
    <string name="level_4">4</string>
    <string name="level_5">5</string>
    <string name="absensi">Absensi</string>
    <string name="ecard">ecard</string>
</resources>
