<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TestActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="8dp"
        android:paddingHorizontal="8dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/btn_before_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sebelumnya"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/number_of_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_next_test"
            app:layout_constraintStart_toEndOf="@+id/btn_before_test"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Soal Ke" />

        <Button
            android:id="@+id/btn_next_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Selanjutnya"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/type_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="TYPE TEST" />

            <TextView
                android:id="@+id/sub_type_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:visibility="gone"
                android:textStyle="normal"
                tools:text="TYPE TEST" />

            <TextView
                android:id="@+id/id_question_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="#FFFFFF"
                android:textSize="8sp"
                android:textStyle="normal"
                android:visibility="visible"
                tools:text="TYPE TEST" />

            <TextView
                android:id="@+id/question_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textStyle="normal"
                tools:text="TYPE TEST" />


            <LinearLayout
                android:id="@+id/linear_multiple_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radio_group_option_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radio_option_a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textColor="@android:color/background_dark"
                        android:text="option A" />

                    <RadioButton
                        android:id="@+id/radio_option_b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textColor="@android:color/background_dark"
                        android:text="option B" />

                    <RadioButton
                        android:id="@+id/radio_option_c"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textColor="@android:color/background_dark"
                        android:text="option C" />

                    <RadioButton
                        android:id="@+id/radio_option_d"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textColor="@android:color/background_dark"
                        android:text="option D" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_level_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radio_group_level_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <RadioButton
                        android:id="@+id/radio_option_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textColor="@android:color/background_dark"
                        android:text="@string/level_1" />

                    <RadioButton
                        android:id="@+id/radio_option_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textColor="@android:color/background_dark"
                        android:text="@string/level_2" />

                    <RadioButton
                        android:id="@+id/radio_option_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textColor="@android:color/background_dark"
                        android:text="@string/level_3" />

                    <RadioButton
                        android:id="@+id/radio_option_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textColor="@android:color/background_dark"
                        android:text="@string/level_4" />

                    <RadioButton
                        android:id="@+id/radio_option_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textColor="@android:color/background_dark"
                        android:text="@string/level_5" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_inline_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_text_inline_text_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/background_dark"
                    android:hint="@string/mauskan_jawaban_anda"
                    android:inputType="textLongMessage" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>